--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "q": "1.1.2",
     "qunitjs": "1.17.1",
     "requirejs": "2.1.17",
+    "requirejs-handlebars": "0.1.1",
     "sinon": "1.10.3",
-    "time-grunt": "1.0.0"
+    "time-grunt": "1.0.0",
+    "webpack": "1.9.11"
   },
   "jsdomVersions": {
     "node": "3.1.2",
