--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/LandRover/Groovy-Music-Player",
   "devDependencies": {
+    "bower": "1.4.1",
     "commitplease": "2.0.0",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
