removed handlebars.. too much of an overhead here

--- a/bower.json
+++ b/bower.json
@@ -9,9 +9,7 @@
     "requirejs": "2.1.17",
     "qunit": "1.18.0",
     "requirejs-text": "2.0.14",
-    "handlebars": "3.0.3",
-    "handlebars-loader": "0.2.0",
-    "underscore": "1.8.3",
+    "lodash": "3.9.3",
     "jquery": "2.1.4"
   }
 }
