--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "grunt-text-replace": "0.3.12",
     "grunt-jsonlint": "1.0.4",
     "grunt-webpack": "1.0.8",
+    "html-loader": "0.3.0",
+    "url-loader": "0.5.6",
     "native-promise-only": "0.7.8-a",
     "load-grunt-config": "0.16.0",
     "load-grunt-tasks": "1.0.0",
